--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Sentra - Free Bootstrap Theme</title>
+        <title>Dr. Christina Katsagoni</title>
         
 <!-- 
 
-Sentra Template
+Dr. Christina Katsagoni Template
 
-https://templatemo.com/tm-518-sentra
+https://templatemo.com/tm-518-Dr. Christina Katsagoni
 
 -->
         <meta name="description" content="">
@@ -122,8 +122,8 @@ https://templatemo.com/tm-518-sentra
                     <div class="image"></div>
                     <div class="info">
                         <div>
-                          <h1>Beautiful Template<br>Sentra</h1>
-                          <p>Sentra is free Bootstrap CSS Template by templatemo website.<br>
+                          <h1>Beautiful Template<br>Dr. Christina Katsagoni</h1>
+                          <p>Dr. Christina Katsagoni is free Bootstrap CSS Template by templatemo website.<br>
                           	Please share our site link to your friends.</p>
                           <div class="white-button button">
                               <a href="#featured">Discover More</a>
@@ -191,7 +191,7 @@ https://templatemo.com/tm-518-sentra
                             <div class="text-content">
                                 <h4>Lorem ipsum dolor</h4>
                                 <span>Proin et sapien</span>
-                                <p>#1 You are allowed to use Sentra Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
+                                <p>#1 You are allowed to use Dr. Christina Katsagoni Template for your business or client websites. You can use it for commercial or non-commercial or educational purposes.</p>
                             </div>
                         </div>
                         <div class="item">
@@ -583,7 +583,7 @@ https://templatemo.com/tm-518-sentra
                 </div>
                 <div id="contact-content">
                     <div class="section-heading">
-                        <h1>Contact<br><em>Sentra</em></h1>
+                        <h1>Contact<br><em>Dr. Christina Katsagoni</em></h1>
                         <p>Curabitur hendrerit mauris mollis ipsum vulputate rutrum. 
                         <br>Phasellus luctus odio eget dui imperdiet.</p>
                         
