--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ https://templatemo.com/tm-518-Dr. Christina Katsagoni
 
         <div class="sidebar-navigation hidde-sm hidden-xs">
             <div class="logo">
-                <a href="#">Sen<em>tra</em></a>
+                <a href="#"><em>Dr Christina</em>Katsagoni</a>
             </div>
             <nav>
                 <ul>
