--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ https://templatemo.com/tm-518-Dr. Christina Katsagoni
                     <div class="image"></div>
                     <div class="info">
                         <div>
-                          <h1>Dr. Christina Katsagoni is a nutrition professor based in Athens, Greece</h1>
+                          <h1>Dr. Christina Katsagoni</h1>
+				<p>is a nutrition professor <br> based in Athens, Greece.</p>
                           
                           <div class="white-button button">
                               <a href="#featured">Find Out More</a>
