--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ https://templatemo.com/tm-518-Dr. Christina Katsagoni
                     <div class="info">
                         <div>
                           <h1>Dr. Christina Katsagoni</h1>
-				<p>is a nutrition professor <br> based in Athens, Greece.</p>
+				<p>is a nutrition professor based in Athens, Greece.</p>
                           
                           <div class="white-button button">
                               <a href="#featured">Find Out More</a>
