--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://templatemo.com/tm-518-Dr. Christina Katsagoni
             </ul>
         </div>
 
-        <div class="slide">
+        <div class="slider">
             <div class="Modern-Slider content-section" id="top">
                 <!-- Item -->
                 <div class="item item-1">
