--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ https://templatemo.com/tm-518-Dr. Christina Katsagoni
                     <div class="info">
                         <div>
                          
-                          
+                           <!-- 
                           <div class="white-button button">
                               <a href="#featured">Find Out More</a>
-                          </div>
+                          </div>-->
                         </div>
                         </div>
                     </div>
